[gd_scene load_steps=98 format=2]

[ext_resource path="res://Model/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Model/buttons/gameModeButtons/QuestionMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://View/util/Character.tscn" type="PackedScene" id=3]
[ext_resource path="res://View/util/Block.tscn" type="PackedScene" id=4]
[ext_resource path="res://Control/interface/BlockTower.gd" type="Script" id=5]
[ext_resource path="res://Control/interface/Gameover.gd" type="Script" id=6]
[ext_resource path="res://Control/logic/Timer.gd" type="Script" id=7]
[ext_resource path="res://textures/woodTexture.jpg" type="Texture" id=8]
[ext_resource path="res://Model/buttons/QuitButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Model/sounds/sfx/correct_sound.wav" type="AudioStream" id=10]
[ext_resource path="res://Model/sounds/MusicBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://Model/sounds/sfx/wrong_sound.wav" type="AudioStream" id=12]
[ext_resource path="res://View/util/BossBlock.tscn" type="PackedScene" id=13]
[ext_resource path="res://Model/sounds/sfx/powerup_sound.wav" type="AudioStream" id=14]
[ext_resource path="res://View/util/NextWorldBoard.tscn" type="PackedScene" id=15]
[ext_resource path="res://Montserrat-SemiBold.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (9).png" type="Texture" id=17]
[ext_resource path="res://Control/logic/bossFight.gd" type="Script" id=18]
[ext_resource path="res://Model/Characters/RiderRabbit/RabbitRun1.png" type="Texture" id=19]
[ext_resource path="res://Model/Characters/Warrior/Idle (1).png" type="Texture" id=20]
[ext_resource path="res://Model/Characters/Warrior/Idle (2).png" type="Texture" id=21]
[ext_resource path="res://Model/Characters/RiderRabbit/RabbitRun2.png" type="Texture" id=22]
[ext_resource path="res://Model/Characters/RiderRabbit/RabbitRun3.png" type="Texture" id=23]
[ext_resource path="res://Model/Characters/CarefulCyborg/JumpMelee (5).png" type="Texture" id=24]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (2).png" type="Texture" id=25]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (8).png" type="Texture" id=26]
[ext_resource path="res://Model/Characters/CarefulCyborg/Melee (6).png" type="Texture" id=27]
[ext_resource path="res://Model/Characters/CarefulCyborg/JumpMelee (4).png" type="Texture" id=28]
[ext_resource path="res://Model/Characters/CarefulCyborg/JumpMelee (6).png" type="Texture" id=29]
[ext_resource path="res://Model/Characters/CarefulCyborg/Melee (5).png" type="Texture" id=30]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (3).png" type="Texture" id=31]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (7).png" type="Texture" id=32]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (10).png" type="Texture" id=33]
[ext_resource path="res://Model/Characters/CarefulCyborg/Melee (7).png" type="Texture" id=34]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (6).png" type="Texture" id=35]
[ext_resource path="res://Model/Characters/CarefulCyborg/Melee (2).png" type="Texture" id=36]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (1).png" type="Texture" id=37]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (4).png" type="Texture" id=38]
[ext_resource path="res://Model/Characters/CarefulCyborg/Melee (3).png" type="Texture" id=39]
[ext_resource path="res://Model/Characters/CarefulCyborg/Melee (4).png" type="Texture" id=40]
[ext_resource path="res://Model/Characters/CarefulCyborg/JumpMelee (8).png" type="Texture" id=41]
[ext_resource path="res://Model/Characters/CarefulCyborg/JumpMelee (7).png" type="Texture" id=42]
[ext_resource path="res://Model/Characters/CarefulCyborg/Melee (1).png" type="Texture" id=43]
[ext_resource path="res://Model/Characters/CarefulCyborg/Melee (8).png" type="Texture" id=44]
[ext_resource path="res://Model/Characters/CarefulCyborg/Idle (5).png" type="Texture" id=45]
[ext_resource path="res://Model/Characters/CarefulCyborg/JumpMelee (2).png" type="Texture" id=46]
[ext_resource path="res://Model/Characters/CarefulCyborg/JumpMelee (1).png" type="Texture" id=47]
[ext_resource path="res://Model/Characters/CarefulCyborg/JumpMelee (3).png" type="Texture" id=48]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (5).png" type="Texture" id=49]
[ext_resource path="res://Model/Characters/Warrior/Idle (7).png" type="Texture" id=50]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (5).png" type="Texture" id=51]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (2).png" type="Texture" id=52]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (9).png" type="Texture" id=53]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (4).png" type="Texture" id=54]
[ext_resource path="res://Model/Characters/Warrior/Idle (5).png" type="Texture" id=55]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (6).png" type="Texture" id=56]
[ext_resource path="res://Model/Characters/Warrior/Idle (8).png" type="Texture" id=57]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (10).png" type="Texture" id=58]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (1).png" type="Texture" id=59]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (6).png" type="Texture" id=60]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (8).png" type="Texture" id=61]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (2).png" type="Texture" id=62]
[ext_resource path="res://Model/Characters/Warrior/Idle (10).png" type="Texture" id=63]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (3).png" type="Texture" id=64]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (1).png" type="Texture" id=65]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (7).png" type="Texture" id=66]
[ext_resource path="res://Model/Characters/Warrior/Idle (9).png" type="Texture" id=67]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (10).png" type="Texture" id=68]
[ext_resource path="res://Model/Characters/ZestyZombie/Walk (3).png" type="Texture" id=69]
[ext_resource path="res://Model/Characters/Warrior/Idle (6).png" type="Texture" id=70]
[ext_resource path="res://Model/Characters/Warrior/Idle (3).png" type="Texture" id=71]
[ext_resource path="res://Model/Characters/Warrior/Idle (4).png" type="Texture" id=72]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (4).png" type="Texture" id=73]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (14).png" type="Texture" id=74]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (7).png" type="Texture" id=75]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (12).png" type="Texture" id=76]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (15).png" type="Texture" id=77]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (8).png" type="Texture" id=78]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (11).png" type="Texture" id=79]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (9).png" type="Texture" id=80]
[ext_resource path="res://Model/Characters/ZestyZombie/Idle (13).png" type="Texture" id=81]
[ext_resource path="res://textures/boss/Lava.png" type="Texture" id=82]
[ext_resource path="res://textures/boss/Baren.png" type="Texture" id=83]
[ext_resource path="res://textures/boss/Desert.png" type="Texture" id=84]
[ext_resource path="res://textures/boss/background.png" type="Texture" id=85]
[ext_resource path="res://textures/boss/farPlanets.png" type="Texture" id=86]
[ext_resource path="res://textures/boss/rings.png" type="Texture" id=87]
[ext_resource path="res://textures/boss/bigPlanet.png" type="Texture" id=88]
[ext_resource path="res://textures/boss/Ocean.png" type="Texture" id=89]
[ext_resource path="res://Model/buttons/gameModeButtons/BossMenu.tscn" type="PackedScene" id=90]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 16 )

[sub_resource type="TileSet" id=3]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 37 ), ExtResource( 25 ), ExtResource( 31 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 26 ), ExtResource( 17 ), ExtResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 42 ), ExtResource( 41 ) ],
"loop": true,
"name": "jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 34 ), ExtResource( 44 ) ],
"loop": true,
"name": "attack",
"speed": 13.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 59 ), ExtResource( 52 ), ExtResource( 64 ), ExtResource( 73 ), ExtResource( 51 ), ExtResource( 56 ), ExtResource( 75 ), ExtResource( 78 ), ExtResource( 80 ), ExtResource( 68 ), ExtResource( 79 ), ExtResource( 76 ), ExtResource( 81 ), ExtResource( 74 ), ExtResource( 77 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 65 ), ExtResource( 62 ), ExtResource( 69 ), ExtResource( 54 ), ExtResource( 49 ), ExtResource( 60 ), ExtResource( 66 ), ExtResource( 61 ), ExtResource( 53 ), ExtResource( 58 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=7]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 55 ), ExtResource( 70 ), ExtResource( 50 ), ExtResource( 57 ), ExtResource( 67 ), ExtResource( 63 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
} ]

[node name="World" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -111

[node name="Background" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="BossBg" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_left = -16.0
margin_top = -22.0
margin_right = 1053.0
margin_bottom = 629.0
texture = ExtResource( 85 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet" type="Sprite" parent="CanvasLayer/BossBg"]
position = Vector2( 96.3985, 512.464 )
scale = Vector2( 3.71971, 3.53446 )
texture = ExtResource( 88 )

[node name="Planets" type="Sprite" parent="CanvasLayer/BossBg"]
position = Vector2( 267.589, 168.974 )
scale = Vector2( 1.33811, 1.28393 )
texture = ExtResource( 86 )

[node name="Rings" type="Sprite" parent="CanvasLayer/BossBg"]
position = Vector2( 311.91, 189.473 )
scale = Vector2( 1.71696, 1.84788 )
texture = ExtResource( 87 )

[node name="Map1" type="Sprite" parent="CanvasLayer/BossBg"]
position = Vector2( 723.744, 323.994 )
scale = Vector2( 14.6888, 12.5189 )
texture = ExtResource( 84 )

[node name="Map2" type="Sprite" parent="CanvasLayer/BossBg"]
visible = false
position = Vector2( 723.744, 323.994 )
scale = Vector2( 14.6888, 12.5189 )
texture = ExtResource( 89 )

[node name="Map3" type="Sprite" parent="CanvasLayer/BossBg"]
visible = false
position = Vector2( 723.744, 323.994 )
scale = Vector2( 14.6888, 12.5189 )
texture = ExtResource( 82 )

[node name="Map4" type="Sprite" parent="CanvasLayer/BossBg"]
visible = false
position = Vector2( 723.744, 323.994 )
scale = Vector2( 14.6888, 12.5189 )
texture = ExtResource( 83 )

[node name="Floor" type="ColorRect" parent="."]
margin_left = 3.63965
margin_top = 571.0
margin_right = 1042.64
margin_bottom = 611.0
color = Color( 0.262745, 0.376471, 0.227451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockTower" type="VBoxContainer" parent="."]
margin_left = 94.0
margin_top = 196.0
margin_right = 171.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Block" parent="BlockTower" instance=ExtResource( 4 )]
position = Vector2( -0.697098, 322.235 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PlayBoard" type="Control" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -233.0
margin_top = 51.0
margin_right = 498.0
margin_bottom = -103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="Sprite" parent="GUI/PlayBoard"]
modulate = Color( 0.501961, 0.419608, 0.419608, 1 )
show_behind_parent = true
position = Vector2( 403.937, 223.13 )
scale = Vector2( 0.282985, 0.126654 )
texture = ExtResource( 8 )

[node name="QuestionMenu" parent="GUI/PlayBoard" instance=ExtResource( 2 )]
visible = false
margin_left = 111.0
margin_top = 25.0
margin_right = 1303.0
margin_bottom = 835.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="HTTPRequest" type="HTTPRequest" parent="GUI/PlayBoard/QuestionMenu"]

[node name="NextWorld" parent="GUI/PlayBoard" instance=ExtResource( 15 )]
visible = false
margin_left = 103.0
margin_top = 19.0
margin_right = 720.0
margin_bottom = 418.0

[node name="BossBoard" type="Control" parent="GUI"]
margin_left = 352.0
margin_top = 50.0
margin_right = 1010.0
margin_bottom = 501.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossMenu" parent="GUI/BossBoard" instance=ExtResource( 90 )]
margin_left = -6.34668
margin_top = -20.6267
margin_right = 1018.65
margin_bottom = 599.373
rect_scale = Vector2( 0.65, 0.814 )

[node name="Header" type="Node2D" parent="GUI"]
position = Vector2( -393.148, -16.3245 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/Header"]
anchor_right = 10.0
margin_left = 450.0
margin_top = 20.0
margin_right = 523.0
margin_bottom = 37.0
rect_scale = Vector2( 3, 4 )
rect_clip_content = false
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/Header/RichTextLabel"]
self_modulate = Color( 0.619608, 0.290196, 0.290196, 1 )
show_behind_parent = true
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0452
margin_top = -1.36037
margin_right = -19.0452
margin_bottom = -1.36037
color = Color( 0.415686, 0.223529, 0.223529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="GUI"]
autostart = true
script = ExtResource( 7 )

[node name="Label" type="Label" parent="GUI/Timer"]
margin_right = 218.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "00:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" parent="GUI" instance=ExtResource( 9 )]
margin_left = 910.193
margin_top = 502.617
margin_right = 1012.19
margin_bottom = 590.617
script = ExtResource( 6 )

[node name="SelectedCharacter" parent="." instance=ExtResource( 3 )]
position = Vector2( 130.596, 482.932 )

[node name="Camera2D" type="Camera2D" parent="SelectedCharacter"]
offset = Vector2( 380, -170 )
current = true
drag_margin_v_enabled = true

[node name="CorrectSound" type="AudioStreamPlayer2D" parent="SelectedCharacter"]
position = Vector2( -130.596, -482.932 )
stream = ExtResource( 10 )
volume_db = 6.0

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="SelectedCharacter"]
position = Vector2( -130.596, -482.932 )
stream = ExtResource( 14 )
volume_db = 6.0

[node name="WrongSound" type="AudioStreamPlayer2D" parent="SelectedCharacter"]
position = Vector2( -130.596, -482.932 )
stream = ExtResource( 12 )
volume_db = 12.0

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
format = 1

[node name="MusicBox" parent="." instance=ExtResource( 11 )]

[node name="BossContainter" type="VBoxContainer" parent="."]
margin_left = 234.939
margin_top = -2105.0
margin_right = 311.939
margin_bottom = -1519.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossBlock" parent="BossContainter" instance=ExtResource( 13 )]
position = Vector2( 7.5, 499.819 )

[node name="BossSprite1" type="AnimatedSprite" parent="BossContainter/BossBlock"]
modulate = Color( 0.705882, 0.807843, 0, 1 )
position = Vector2( 35.9943, -16.0024 )
scale = Vector2( 0.210295, 0.191248 )
frames = SubResource( 4 )
animation = "attack"
frame = 1
playing = true
flip_h = true

[node name="BossBlock2" parent="BossContainter" instance=ExtResource( 13 )]
position = Vector2( 7.5, -1625 )

[node name="BossSprite2" type="AnimatedSprite" parent="BossContainter/BossBlock2"]
modulate = Color( 0.729412, 0.737255, 0.870588, 1 )
self_modulate = Color( 0.301961, 0.321569, 0.807843, 1 )
position = Vector2( 28.6423, -8.29443 )
scale = Vector2( 1.67817, 1.51053 )
frames = SubResource( 5 )
frame = 1
playing = true
flip_h = true

[node name="BossBlock3" parent="BossContainter" instance=ExtResource( 13 )]
position = Vector2( 7.5, -3750 )

[node name="BossSprite3" type="AnimatedSprite" parent="BossContainter/BossBlock3"]
modulate = Color( 0.929412, 0.203922, 0.203922, 1 )
position = Vector2( 36.0744, -22.748 )
scale = Vector2( 0.243826, 0.177875 )
frames = SubResource( 6 )
animation = "walk"
frame = 6
playing = true
flip_h = true

[node name="BossBlock4" parent="BossContainter" instance=ExtResource( 13 )]
position = Vector2( 7.5, -5875 )

[node name="BossSprite4" type="AnimatedSprite" parent="BossContainter/BossBlock4"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 35.408, -18.3281 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 7 )
animation = "idle"
frame = 8
playing = true
flip_h = true
[connection signal="request_completed" from="GUI/PlayBoard/QuestionMenu/HTTPRequest" to="GUI/PlayBoard/QuestionMenu" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="GUI/BossBoard/BossMenu/MarginContainer/row/columnLeft/Option1" to="GUI/BossBoard" method="_on_Option1_pressed"]
[connection signal="pressed" from="GUI/BossBoard/BossMenu/MarginContainer/row/columnLeft/Option3" to="GUI/BossBoard" method="_on_Option3_pressed"]
[connection signal="pressed" from="GUI/BossBoard/BossMenu/MarginContainer/row/columnRight/Option2" to="GUI/BossBoard" method="_on_Option2_pressed"]
[connection signal="pressed" from="GUI/BossBoard/BossMenu/MarginContainer/row/columnRight/Option4" to="GUI/BossBoard" method="_on_Option4_pressed"]

[editable path="GUI/BossBoard/BossMenu"]
